config otp
